--- a/ui/package.json
+++ b/ui/package.json
@@ -6,15 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve --open",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "now-start": "vue-cli-service serve"
   },
   "dependencies": {
+    "apexcharts": "^3.19.2",
     "core-js": "^3.6.2",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.3",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
@@ -22,7 +23,6 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-e2e-cypress": "^4.1.2",
     "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-plugin-router": "^4.4.1",
     "@vue/cli-plugin-unit-jest": "^4.1.2",
@@ -33,7 +33,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.3.0",
     "eslint-config-vuetify": "^0.4.1",
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.24.3",
