--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "vue-apexcharts": "^1.5.3",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.2.0",
+    "vue-skycons": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
