--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^3.2.0",
     "vue-skycons": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
+    "vuelayers": "^0.11.27",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
