--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -16,8 +16,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
-.idea
-.vscode
+*.idea
+*.vscode
+*.json
 *.suo
 *.ntvs*
 *.njsproj
