--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,9 @@
     "axios-auth-refresh": "^2.2.8",
     "core-js": "^3.6.2",
     "d3": "^5.16.0",
+    "fs": "0.0.1-security",
     "particles.js": "^2.0.0",
+    "request": "^2.88.2",
     "simple-node-logger": "^18.12.24",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.3",
@@ -27,7 +29,8 @@
     "vue2-google-maps": "^0.10.7",
     "vuelayers": "^0.11.27",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
