--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -5,9 +5,9 @@
         "endpoint": "http://157.190.53.15:8080/api"
     },
     "gcp": {
-        "username":"tharindu4",
+        "username":"tharindu1",
         "orgName":"Org2",
-        "role":"buildingOwner",
+        "role":"admin",
         "endpoint": "http://34.123.68.43:4000"
     }
 }
