--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.2",
     "d3": "^5.16.0",
     "fs": "0.0.1-security",
+    "leaflet": "^1.7.1",
     "particles.js": "^2.0.0",
     "request": "^2.88.2",
     "simple-node-logger": "^18.12.24",
@@ -26,8 +27,8 @@
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.2.0",
     "vue-skycons": "^3.2.0",
-    "vue2-google-maps": "^0.10.7",
-    "vuelayers": "^0.11.27",
+    "vue2-leaflet": "^2.6.0",
+    "vuelayers": "^0.11.31",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "yargs": "^16.1.0"
@@ -36,7 +37,7 @@
     "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-plugin-router": "^4.4.1",
-    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
     "@vue/cli-plugin-vuex": "^4.4.1",
     "@vue/cli-service": "^4.1.2",
     "@vue/eslint-config-standard": "^5.0.1",
