--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -9,5 +9,10 @@
         "orgName":"Org2",
         "role":"admin",
         "endpoint": "http://35.222.102.196:4000"
+    },
+    "iot": {
+        "username": "avinash",
+        "password":  "Test@456",
+        "endpoint": "https://157.190.54.205/dec_authority/api"
     }
 }
