--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "dev": "vue-cli-service serve --open",
+    "dev": "vue-cli-service serve --open export NODE_TLS_REJECT_UNAUTHORIZED=0 && nuxt --env.NODE_TLS_REJECT_UNAUTHORIZED=0",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "now-start": "vue-cli-service serve"
   },
@@ -17,6 +17,7 @@
     "axios-auth-refresh": "^3.1.0",
     "core-js": "^3.6.2",
     "d3": "^5.16.0",
+    "file-saver": "^2.0.5",
     "fs": "0.0.1-security",
     "leaflet": "^1.7.1",
     "particles.js": "^2.0.0",
@@ -31,6 +32,7 @@
     "vuelayers": "^0.11.31",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
+    "xlsx": "^0.16.9",
     "yargs": "^16.1.0"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.24.3",
     "sass-loader": "^8.0.0",
+    "script-loader": "^0.7.2",
     "vee-validate": "^3.2.2",
     "vue-chartist": "^2.2.1",
     "vue-cli-plugin-i18n": "^0.6.0",
